# Bitwave

./: .gitignore  README.md  requirements.txt  setup.py
bitwave/: __init__.py  cli.py  core.py
player/: main.py  run.py
player/core/: audio_engine.py  playlist.py
player/ui/: spatial_visualizer.py  waveform.py
rust/: Cargo.toml
rust/src/: lib.rs
