[package]
name = "bitwave"
version = "0.1.0"
edition = "2021"
authors = ["Bitwave Contributors"]
description = "High-fidelity, developer-friendly, future-proof audio format"
license = "MIT"
repository = "https://github.com/makalin/Bitwave"

[dependencies]
# Core dependencies
nom = "7.1"  # Parser combinator library
byteorder = "1.4"  # For reading/writing binary data
thiserror = "1.0"  # For error handling
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"  # For JSON serialization

# Optional features
[features]
default = []
compression = ["flate2"]  # For optional compression support
spatial = ["nalgebra"]  # For spatial audio processing

[dev-dependencies]
criterion = "0.5"  # For benchmarking
tempfile = "3.8"  # For tests

[[bench]]
name = "benchmarks"
harness = false 